=== Safari-138 ===

2004-04-23  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John

        Added some plumbing for applying styles.

        * DOM.subproj/DOMExtensions.h: Copied from WebCore.
        * WebView.subproj/WebView.m:
        (-[WebView DOMDocument]): Added new helper.
        (-[WebView styleDeclarationWithText:]): Added new helper.
        * WebView.subproj/WebViewPrivate.h: Declare above methods.

2004-04-22  Richard Williamson   <rjw@apple.com>

	Updates to plugin binding APIs.
	Updates to Java plugin APIs.
	Transparency fix for Dashboard.
	
        Reviewed by John and Greg Bolsinga.

        * Plugins.subproj/WebPluginJava.h: Added.
	New API for Java plugin.        

	* Plugins.subproj/npfunctions.h:
        * Plugins.subproj/npruntime.h:
        (_NPString::):
        (_NPString::_NPVariant::):
        * Plugins.subproj/npsap.h: Added.
	New API for plugin bindings.        

	* WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView drawRect:]):
	Update for Dashboard.  View must fill with transparency when not
	drawing background.        

	* copy-webcore-files-to-webkit:

2004-04-22  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Hyatt

        More work to bring code up to date with the latest API proposal. Note that
        all of the replaceXXX methods below now operate on the current selection, so
        the method implementations have been simplifed accordingly.

        * WebView.subproj/WebDataSource.m:
        (-[WebDataSource _replaceSelectionWithArchive:]): New name for _replaceSelectionWithWebArchive.
        * WebView.subproj/WebDataSourcePrivate.h: Ditto.
        * WebView.subproj/WebDefaultEditingDelegate.m:
        (-[WebDefaultEditingDelegate webViewShouldBeginEditing:inDOMRange:]): Added inDOMRange: parameter.
        (-[WebDefaultEditingDelegate webViewShouldEndEditing:inDOMRange:]): Ditto.