@@ -123,6 +123,11 @@ extern NSString *WebPageCacheDocumentViewKey;
 @interface WebFrame (WebPrivate)
 
 // API Considerations:
+/*!
+    @method loadArchive:
+    @abstract Causes WebFrame to load a WebArchive.
+    @param The archive to be loaded.
+*/
 - (void)loadArchive:(WebArchive *)archive;
 
 // Other private methods
